Fixed some tag mistakes and added style to the texts as well as background.
I fixed a typo with the div tag and changed the logo image. In addition, font type and color was added to the different texts. I also choose different parameters such as the width, sizes and positions for the texts. Finally, I added a background image and used flex, border-box and other properties to style the image.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <body>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">  
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Restaurant Ambrosia</title>
+    <!--Font "Awesome" CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="C:\Users\javoh\Desktop\styles.css" rel = "stylesheet" type = "text/css">
 
+    <!--Scroll reveal CDN-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -16,7 +23,7 @@
                 <i class="fas fa-____"><</i>
                 <i class="fas fa-times"><</i>
             </div>
-            <a href="index.html" class="logo"<>img src="https://cdn4.vectorstock.com/i/1000x1000/92/63/rose-flower-plant-logo-vector-14879263.jpg" alt="Rose Logo"></a>
+            <a href="index.html" class="logo"><img src="images/Rose (2).png" alt="Rose Logo"></a>
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Home</a>
@@ -42,7 +49,7 @@
 </header>
 <!--The Header Ends-->
 <section class="hero" id="hero">
-    <div> class="container">
+    <div class="container">
         <h2 class="sub-headline">
             <span class="first-letter">W</span>elcome!
         </h2>
