--- a/index.html
+++ b/index.html
@@ -61,13 +61,36 @@
                 <div class="line line-right"></div>
             </div>
             <div class="single-animation">
-                <h5>Ready to be opened</h5>
-                <a href="#" class="btn cta-btn"></a>
+                <h5>Oia, Santorini</h5>
+                <a href="#" class="btn cta-btn">Exerevno</a>
             </div>
         </div>
     </div>
 </section>
 <!--Hero ends-->
+<section class="Our Story">
+    <div class="container">
+        <div class="restaurant-info">
+            <div class="restaurant-description padding-right">
+                <div class="global-headline">
+                    <h2 class="sub-headline">
+                        <span class="first-letter">O</span>ur
+                    </h2>
+                    <h1 class="headline headline-dark">Story</h1>
+                    <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+                </div>
+                <p>
+                    text goes here
+                </p>
+                <a href="#" class="btn body-btn">About Us</a>
+            </div>
+            <div class="restaurant-info-img ">
+                <img src="images/our-story-1.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+<!--Our Story Ends Here-->
 
 
 
