Added a new section and created the footer alonog with newsletter container
I created a section called "Gastronomy Adventure" and styled it with images and "make a reservation" button was added. In addition, I designed the footer by adding some content, icons and a newsletter-form was also added which includes a placeholder to type in email address.

--- a/index-updated.html
+++ b/index-updated.html
@@ -147,8 +147,79 @@
     </div>
 </section>
 <!--caldera-view ends-->
+<section class="Gastronomy Adventure">
+    <div class="container">
+        <div class="restaurant-info">
+            <div class="restaurant-description padding-right">
+                <div class="global-headline">
+                    <h2 class="sub-headline">
+                        <span class="first-letter">G</span>astronomy
+                    </h2>
+                    <h1 class="headline headline-dark">Adventure</h1>
+                    <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+                </div>
+                <p>
+                    text goes here...
+                </p>
+                <a href="#" class="btn body-btn">Make a reservation</a>
+            </div>
+            <div class="image-group">
+                <img class = "animate-top" src="https://www.strogilisantorini.com/blog/user/pages/01.home/01.oia-santorini-greece/beautiful-oia-santorini-greece-by-strogili-studios-apartments.jpg" alt="Oia sunset image">
+                <img class = "animate-bottom" src="https://www.greeka.com/shops/photos/entertainment/468/santorini-ambrosia-top-1-1024.jpg" alt="candle light dinner image">
+            </div>
+        </div>
+    </div>
+</section>
+<!--Culinary delight ends-->
+<footer>
+    <div class="container">
+        <div class="back-to-top">
+            <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+    </div>
+    <div class="footer-content">
+        <div class="footer-content-about animate-up">
+            <h4>About Ambrosia</h4>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            <p>
+                Text will go here...
+                Text will go here...
+            </p>
+        </div>
 
-
+        <div class="footer-content-divider animate-bottom">
+            <div class="social-media">
+                <h4>Follow along</h4>
+                <ul class="social-icons">
+                    <li>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-tripadvisor"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="newsletter-container">
+                <h4>Newsletter</h4>
+                <form action="" class="newsletter-form">
+                    <input type="text" class="newsletter-input" placeholder="Your Email Address...">
+                    <button class="newsletter-btn" type="submit">
+                        <i class="fas fa-envelope"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</footer>
 
 
 </body>
