Added more time options and changed color of certain things
More options for reservation time was added and I changed the select day to full date option using type ="date" calendar version.

--- a/Reservation.html
+++ b/Reservation.html
@@ -29,33 +29,34 @@
             <h2>Reserve a Table </h2>
             <div class = "card-container">
                 <div class = "card-img">
-                    <!-- image here -->
+                    <img src="https://www.katzsteakhouse.com/uploads/3/9/4/7/39478227/reserved-table.jpg" alt="Reserved Table">
                 </div>
 
                 <div class = "card-content">
                     <h3>Reservation</h3>
                     <form>
                         <div class = "form-row">
-                            <select name = "days">
-                                <option value = "day-select">Select Day</option>
-                                <option value = "sunday">Sunday</option>
-                                <option value = "monday">Monday</option>
-                                <option value = "tuesday">Tuesday</option>
-                                <option value = "wednesday">Wednesday</option>
-                                <option value = "thursday">Thursday</option>
-                                <option value = "friday">Friday</option>
-                                <option value = "saturday">Saturday</option>
-                            </select>
+                            <input type="date" placeholder="d/m/Y"><br>
+
 
                             <select name = "hours">
                                 <option value = "hour-select">Select Hour</option>
-                                <option value = "10">10: 00</option>
-                                <option value = "10">12: 00</option>
-                                <option value = "10">14: 00</option>
-                                <option value = "10">16: 00</option>
-                                <option value = "10">18: 00</option>
-                                <option value = "10">20: 00</option>
-                                <option value = "10">22: 00</option>
+                                <option value = "10">9:00 AM</option>
+                                <option value = "10">10:00 AM</option>
+                                <option value = "10">11:00 AM</option>
+                                <option value = "10">12:00 PM</option>
+                                <option value = "10">12:30 PM</option>
+                                <option value = "10">1:00 PM</option>
+                                <option value = "10">2:00 PM</option>
+                                <option value = "10">3:00 PM</option>
+                                <option value = "10">4:00 PM</option>
+                                <option value = "10">5:00 PM</option>
+                                <option value = "10">6:00 PM</option>
+                                <option value = "10">7:00 PM</option>
+                                <option value = "10">8:00 PM</option>
+                                <option value = "10">8:30 PM</option>
+                                <option value = "10">9:00 PM</option>
+                                <option value = "10">10:00 PM</option>
                             </select>
                         </div>
 
