--- a/News.html
+++ b/News.html
@@ -18,7 +18,7 @@
               <i class="fas fa-bars"></i>
             </label>
             <ul>
-      <li><a href="index-updated.html">Home</a></li>
+      <li><a href="index1.html">Home</a></li>
       <li><a href="Menu.html">Menu</a></li>
       <li><a href="Reservation.html">Reservations</a></li>
       <li><a class="active" href="News.html">News</a></li>
