--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
             <div class="logo">
       Rosabelle</div>
       <ul>
-      <li><a href="index-updated.html">Home</a></li>
+      <li><a href="index1.html">Home</a></li>
       <li><a href="Menu.html">Menu</a></li>
       <li><a href="Reservation.html">Reservations</a></li>
       <li><a href="News.html">News</a></li>
