--- a/Reservation.html
+++ b/Reservation.html
@@ -15,7 +15,7 @@
           <i class="fas fa-bars"></i>
         </label>
         <ul>
-  <li><a href="index.html">Home</a></li>
+  <li><a href="index1.html">Home</a></li>
   <li><a href="Menu.html">Menu</a></li>
   <li><a class="active" href="Reservation.html">Reservation</a></li>
   <li><a href="News.html">News</a></li>
