--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
                 <i class="fas fa-____"><</i>
                 <i class="fas fa-times"><</i>
             </div>
-            <a href="index.html" class="logo"><img src="images/Rose (2).png" alt="Rose Logo"></a>
+            <a href="index1.html" class="logo"><img src="images/Rose (2).png" alt="Rose Logo"></a>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="index1.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Menu</a>
+                    <a href="index1.html" class="nav-link">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">About</a>
+                    <a href="index1.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Reservations</a>
+                    <a href="index1.html" class="nav-link">Reservations</a>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">News</a>
+                    <a href="index1.html" class="nav-link">News</a>
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Contact Us</a>
+                        <a href="index1.html" class="nav-link">Contact Us</a>
                     </li>
                 </li>
             </ul>
