--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
             <div class="logo">
       Rosabelle</div>
       <ul>
-      <li><a class="active" href="index-updated.html">Home</a></li>
+      <li><a class="active" href="index1.html">Home</a></li>
       <li><a href="Menu.html">Menu</a></li>
       <li><a href="Reservation.html">Reservations</a></li>
       <li><a href="News.html">News</a></li>
@@ -207,7 +207,7 @@
             <div class="single-footer">
                 <h2>Navigation</h2>
                 <ul>
-                    <li><a href="index-updated.html">Home</a></li>
+                    <li><a href="index1.html">Home</a></li>
                     <li><a href="Menu.html">Menu</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Reservation.html">Reservation</a></li>
