--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
                     </div>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="index-updated.html" class="nav-link">Home</a>
+                            <a href="index1.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="Menu.html" class="nav-link">Menu</a>
